--- a/英语/从句.md
+++ b/英语/从句.md
@@ -185,13 +185,25 @@ They found the murder , _____ surprised me.		which
 
 
 
+## 名词性从句
 
+### 名词性从句引导词系统
 
+名词性从句中引导词通常称为连接词
 
+- 连接代词： what which who whom  whatever  whichever whoever whomever        (作主，宾，表)
+- 连接副词：when where why how whenever wherever however             (作状语)
+- 连接形容词：what which whose whatever whichever whosever           (作定语)
+- 侠义连接词：that                                                                          (不作成分)
 
+### 名词从句的注意事项
 
-
-
+1. 判断从句类型看主句；选连接词看从句
+2. 从句统一用陈述句语序
+3. 宾从的第一个that可省略；if <= whether；介词后一般不用that
+4. 同位语三要素：完整、抽象、同等；that > 90%
+5. 省略
+6. 一人得道，鸡犬升天
 
 
 
