--- a/英语/平行世界/时态.md
+++ b/英语/平行世界/时态.md
@@ -108,8 +108,8 @@ I will not go tot the park if it rains tomorrow.  => He said he would not got to
 ```yaml
 1.谓语形式: be(am/is/are) doing
 2.用法:
-	1): 过去某个时间点正在发生的动作
-	2): 过去一段时间持续发生的动作
+	1): 此时此刻正在发生的动作
+	2): 近段时间持续在发生的动作
 	3): 近段时间渐变的动作
 		It is getting colder and colder.
 	4): 表一般将来
@@ -124,8 +124,8 @@ I will not go tot the park if it rains tomorrow.  => He said he would not got to
 ```yaml
 1.谓语形式: be(was/were) doing
 2.用法:
-	1): 此时此刻正在发生的动作
-	2): 近段时间持续在发生的动作
+	1): 过去某个时间点正在发生的动作
+	2): 过去一段时间持续发生的动作
 	3): 表示过去将来
 		He was going abroad when I met him.	
 ```
@@ -146,7 +146,7 @@ I will not go tot the park if it rains tomorrow.  => He said he would not got to
 ```yaml
 1.形式: have/has done
 2.用法:
-	1): 借古讽今: 过去完成的动作对现在产生的影响
+	1): 借古讽今: 过去结束的动作对现在产生的影响
         He opened the door.
         He has opened the door.
 
@@ -210,4 +210,48 @@ I will not go tot the park if it rains tomorrow.  => He said he would not got to
 2.用法:
 	1): 
 ```
+
+
+
+## 其他
+
+### 现在完成时难题
+
+```
+1.have been to	借古讽今			
+  have gone to  从古到今
+  have been in	从古到今
+2.延续非延续
+  I have finished my homework.   	借故讽今的动词既可以是延续性动词也可是不延续性动词		
+  I have seen the movie. 
+  
+  I have learned English for 5 years 从古到今只能是延续性动词
+3.延续非延续转化
+  I have got married.				借古讽今
+  I have been married for 3 years	 从古到今
+4.否定
+  I have finished my homework already. 肯定
+  I haven't finished my home work yet. 否定/疑问		
+5.have been to
+  
+```
+
+
+
+
+
+## 被动语态
+
+```
+1.不及物动词和系动词   没有被动
+2.被动及完整
+3.it做形式主语
+4.双宾语的被动
+	She told me a joke =>直宾被动: A joke was told (by her)
+						间宾被动: I was told a joke 如果去掉 a joke只剩被动就不完整了
+5.没被动的动词
+have,cost,fit,break out,take place, come true, consit of,take part in
+```
+
+
 
