--- a/英语/平行世界/非谓语.md
+++ b/英语/平行世界/非谓语.md
@@ -1,5 +1,17 @@
 # 非谓语
 
+### 非谓语所作成分表
+
+|      | 不定式 | 动名词 | 分词 |
+| ---- | ------ | ------ | ---- |
+| 主   | ✅      | ✅      |      |
+| 宾   | ✅      | ✅      |      |
+| 表   | ✅      | ✅      |      |
+| 定   | ✅      |        | ✅    |
+| 壮   | ✅      |        | ✅    |
+| 补   | ✅      |        | ✅    |
+| 同   | ✅      |        |      |
+
 ## 不定式
 
 ```
@@ -218,7 +230,6 @@ I told him not to go home.
 	 		Be/get used to
 	 		Devote oneself to
 	 		Stick to
-3.作:
 ```
 
 ## 到底是to do还是 doing
@@ -280,9 +291,266 @@ ask				ask to do要求做						ask sb. to do请求某人做某事
 
 ### 动名词的逻辑主语
 
+```
+通常 形容词性物主代词/名词所有格/宾格/普通格 可以做动名词的逻辑主语
+
+形容词性物主代词/名词所有格
+动名词作主： my smoking here  makes me upset
+动名词作宾： Do you mind my/his smoking here?
+动名词作表： what troubles me is his/my/tom's smoking here
+
+
+your tell him what's what is no use. => it is no use your tell him what's what. 
+
+
+宾格(作动名词宾语)
+Do you mind me/he smoking here
+
+普通格(也就是普通名词)
+I don't like smoking
+I don't like young people smoking
+```
+
+```
+特殊情况
+1.如果动名词的逻辑主语是无生命的东西，就只能用普通格
+Is there any hope of Manchester United winning the game?
+2.如果动名词的逻辑主语是一个较长的名词词组，那他只能用普通格
+Hvae ever heard of a man with common sense refusing such an offer?
+Do you remember Rick and morty disappearing in front of us last month?
+3.当动名词的逻辑主语是其他代词时，常用普通格
+I was astonished at some knocking at the front door this late.
+There is no chance of that being settled.
+
+```
+
+
+
+### 动名词的时态和语态
+
+| 时态   | 主动         | 被动             |
+| ------ | ------------ | ---------------- |
+| 一般式 | doing        | being done       |
+| 完成时 | having done  | having been done |
+| 进行时 | being doing❌ | being been done❌ |
+
+```yaml
+具体用法:
+一般式： 确定的 一般的 主动的
+一般被动式： 确定的 一般的 被动的
+完成式： 确定的 发生在谓语之前的（一次性的） 主动的
+完成被动式： 确定的 发生在位于之前的（一次性的） 被动的
+
+做题步骤
+1.看是否确定
+2.看是一般（doing）还是之前（having done）
+3.看是主动还是被动
+4.看是肯定还是否定
+```
+
+
+
+### 动名词练习
+
+```
+1.people call that ___C___ two birds with one stone.
+	A.kill	B.killed  C.killing  D.being killed
+	
+2.It's no good his ___C___ in these conditions.
+	A.work  B.to work  C.working  D.works
+
+3.We missed ____A__  the film when it was shown last week.
+	A.seeing  B.to see  C.that we saw  D.having been seen
+	
+4.He thought that his fears of __C__ had been proved true.
+	A.fooling  B.to fool  C.being fooled  D.to be fooled
+
+5.After that he expected Peter to do the work without __D___ how.
+	A.tell  B.to tell  C.telling  D.being told
+
+6.He never told me about his __B___ the experiment many times.
+	A.to do  B.doing  C.having done  D.having been done
+	
+7.There is no __C__ what will happen.
+	A.tell  B.to tell  C. telling  D.told
+
+8.Paul is angry about ___D__ to the party.
+	A.not inviting  B.not having invited
+	C.having not been invited  D.not being invited
+	
+
+```
+
+
+
+
+
+## 分词
+
+### 现在分词作成分
+
+```
+作定语
+	单个分词作前置定语
+	分词词组作后置定语
+
+作状语
+	省略： 1.重复  （去掉重复S） 2.不产生歧义（谓语=>非谓语）
+		do/does/did => doing
+		be + doing => doing
+		be + done => done
+		v + p => p
+		情态动词 + do => to do
+
+作补语(宾补，主补)
+
+
+```
+
+### 现在分词的时态和语态
+
+```
+doing		进行的(与谓语同步发生),主动
+being done		进行时（与谓语同步发生）,被动
+having done		发生在谓语之前,主动
+having been done		发生在谓语之前，被动
+
+Doing:
+	Falling rain; the rain falling down.	定	
+	Seeing those pictures, he couldn't help thinking of those memorable days in his hometown. 壮
+	Being so poor in those days, they couldn't afford to send the children to school. 壮
+	There is a bird singing in the tree.	壮
+	They opend fire, killing one of our villagers.	壮
+	I saw him walking into the building.		补
+
+Being done:
+	The house being built has been sold out.
+	Being stuck by the heavy rain, I walked into the bookstore to have a rest.
+	I found the food being bitten.
+	
+Having done: 不能作定语和补语   只能做状语
+	The leaves having fallen were brown.❌
+	Not having received an answer, she wrote another letter to her parents.
+	Having experienced quite a few earthquakes, we didn't take much notice.
+	I saw the leaves having fallen.❌
+
+Having been done: 不能作定语和补语   只能做状语
+	The house having been built was sold out.❌
+	Having been well attended for a week, my dog could walk all by itself.
+	I found my bike having been stolen.❌
+
+```
+
+### 过去分词的时态和语态
+
+```
+done (vi[完成]/vt[完成，被动])
+```
+
+### 过去分词作成分
+
+```
+作定语
+	前置定语 vi
+	前置定语 vt
+	后置定语 vi
+	后置定语 vt
+	
+作状语
+	
+
+作补语
 //TODO
+```
+
+
+
+### 不能做成份的分词结构
+
+```
+Leaves having fallen = fallen leaves
+The house doing been built last year = the house built last year
+
+//TODO
+```
+
+### 分数的逻辑主语（独立主格结构）
+
+```
+分词作状语时，自带逻辑主语[与主句逻辑主语不同]
+//TODO
+```
+
+### 分词练习
 
 ```
 
 ```
 
+![1698822340507](E:\笔记\英语\assets\英语的平行世界\非谓语动词\1698822340507.png)
+
+
+
+```
+
+1.The trees ___A__ last spring grow well now.
+	A.planted  B.planting  C.being planted	D.having been planted
+	解析：分词作定语 过去，被动  选A  其中D不能用作后置定语
+
+2.___D___ to 100^oC,water will be turned into steam.
+	A.Heating  B.Being heated  C.having heated  D.Heated
+	解析：done 表示一般或过去	
+	
+3.___C___ his homework, the boy went out for a walking.
+	A.Finished  B.To finish  C.Having finished  D.Having been finished
+
+4.While __D__ in New York, he made a lot friends.
+	A.live  B.to live  C.lived  D.living
+	
+5.__B__ another good chance, he will do it much better.
+	A.Having given  B.Given  C.Giving  D.Being given
+	
+6.__C__, we were taken to see the library.
+	A.Showing the lab			B.Having shown the lab
+	C.Having been shown the lab  D.Being shown the lab
+
+7.I can't remember some of the English words __D__ last week.
+	A.learning  B.having learned  C.having been learned  D.learned
+	
+	
+
+8.I could not make myself __C__ though I tried to explain myself a lot
+	A. understand	B.understanding 	C.understood	D.be understood
+	
+9. The physicist sat at the desk, ___B__ into the new book.
+	A. dipped	B.dipping	 C. to be dipped 	D.having dipped
+10. A cold rain was falling __A__ with snow.
+	A. mixed	B. mixing 	C.having mixed	D. to be mixed
+11.__A__a satisfactory operation, the patient recovered from illness very quickly.
+	A. Having been given	B. Having given		C. Giving	D. Being given
+12.__B__a satisfactory operation, the doctor believed the patient would recover from his illness very soon.
+	A. Having been given	B. Having given		C. Giving	D. Being given
+13.___B__, Tom jumped into the river and had a good time in it
+	A. Be a good swimmer			B. Being a good swimmer
+	C. Having been a good swimmer 	D. To be a good swimmer
+
+14.When I came in, I saw Dr.Li ___A___ a patient.
+	A.examine	B.examning	C.to examine	D.examined
+```
+
+## 非谓语做题步骤
+
+```
+1)谓语或非谓语
+
+2)确定或不确定
+3)主动或被动（语态）
+4)之前之中之后（时态）
+5)肯定或否定
+6)作成分
+```
+
+|        | 主动                                                         | 被动                                          |
+| ------ | ------------------------------------------------------------ | --------------------------------------------- |
+| 不确定 | to do<br />to be doing<br />to have done<br />to have been doing | to be done<br />to have been done             |
+| 确定   | doing<br />having done<br />（Vi）done                       | be done<br />having been done<br />（Vt）done |
