--- a/英语/平行世界/非谓语.md
+++ b/英语/平行世界/非谓语.md
@@ -554,3 +554,84 @@ The house doing been built last year = the house built last year
 | ------ | ------------------------------------------------------------ | --------------------------------------------- |
 | 不确定 | to do<br />to be doing<br />to have done<br />to have been doing | to be done<br />to have been done             |
 | 确定   | doing<br />having done<br />（Vi）done                       | be done<br />having been done<br />（Vt）done |
+
+### 非谓语做题技
+
+```
+1.注意固定搭配
+2.主动省to，被动还原
+3.目的状语用to do
+4.有些固定用to do； 有些固定用doing； 有些两者皆可且意思不同
+5.注意to是介词的情况
+6.注意不定时的逻辑主语
+7.复杂句子尤其注意看清句子结构
+8.注意和其他考点的混合
+9.注意从省略角度看问题
+```
+
+
+
+```
+1.Nowadays, most people prefer to ____ computer games rather than _____ books.	B
+	A.play; reading		B.play; read	C.playing; reading 	
+2.The workers were made __B__ fro morning to night in the past.
+	A.worked	B.to work 	C.work	D.working
+3.We should do what we can __C__ our English.
+	A.improve  B.improved  C.to improve  D.improving
+4.To live a low-carbon life, we must remember __A___ the lights when we leave the room.	
+	A.to turn off	B.turning off	C.not to turn off
+5.To keep children away from danger, we warn parents __D___children at home alone.
+	A.leave		B.to leave		C.not leave		D.not to leave
+6.We are looking forward to ___A___ Hollywood in America.
+	A.visit		B.visited		C.visiting	
+
+7.--Jane's spoken English is pretty good.
+  --Yeah, she works hard and practices __C___ it both in and out of class.
+	A.spoke		B. to speak		C. speaking
+
+8.--Mario, your mobile phone is ringing.it while crossing the streetWait a minute. 
+  --lt's dangerous for us ______.
+	A.answering		B. to answer 	C.answer	D.answered
+
+9.I still like those good old songs l often listened to __C___ myself in my spare time.
+	A. enjoy	B. enjoying		C. to enjoy 	D.enjoyed
+10. Nancy is really a hard-working student. We often see her _A__ books in the classroon
+	A.read 		B.to read 	C. reads
+
+11.It's dangerous ____ a close look at the iger in the zoo.
+	A.for use taking 	B.of us to take
+	C.of us taking 		D.for us to take
+
+12.--Do you know anyone ____ can repair the bike?		C
+   --Yes. You can ask the man ____ Peter for help.
+   A.which; call	B.that; to calling 		C.that; called		D.which; calls
+ 
+13.Group activities will be organized after class __D__ children develop team spirit.
+	A.helping 	B.having helped 	C.helped	D.to help
+
+14.--Where's your brother now, Bob?			B
+   --I saw him ______ in the street a moment ago and I told him _____
+   A.playing; don't do so 		B.playing; not to do so		C.play; to do so
+   
+15.Today there are more airplanes __B__ more people than ever in the skies
+	A.carry		B.carrying 		C.carried 	D.to be carrying
+
+
+
+prefer to do rather than do
+we should do what we can (do) to do... 我们应该尽我们所能去do某事
+turn off	关闭
+look forward to doing 期待做某事
+warm sb to do 警告某人做某事
+practice to do 练习去做某事...
+practice doing 练习做某事
+```
+
+
+
+
+
+
+
+
+
