--- a/英语/平行世界/非谓语.md
+++ b/英语/平行世界/非谓语.md
@@ -23,25 +23,26 @@
 ```yaml
 1.主语: 
 	To see is to believe.
-	To talk to an Auarius woman without making her angry is imposible.
+	主语过长可后置并用形式主语代替:
+	To talk to an Auarius woman without making her angry is imposible.=>
+	It is imposible to talk to an Auarius woman without making her angry
 
-2.表语:	(不定式作表语 主语部分有实义动词do的任何形式 表语省"to")
+2.表语:	(不定式作表语 主语部分有实义动词do的任何形式 表语省"to")(除此之外，连词连接两不定式前面有do后面也省to)
 	The only thing (that) I can do now is (to) wait. [主语表示很确定(do很确定) 而表语 to wait表示不确定]
 
-3.定语:
+3.定语: 笼统的名词，不定式可作定语来缩小其范围
 	He is always the first one to come and the last one to leave
 	不定式作定语且与其修饰的词之间是动宾关系时,当不定式中的动词为不及物动词时,要加介词保持完整 eg：I have no room to live in./I have no one to talk to.
 
-4.同位语:  (抽象/完整/等同)
+4.同位语:  (完整/抽象/等同)
 	I have a dream to be a director.
 	
-	
-5.状语:
+5.状语:  修饰动词
 	1).目的:
 		I got up at 4 am. to watch the football match
 	2).结果:
 		1.only to do:
-			He harried to be station, only to find the strain had left.
+			He harried to the station, only to find the strain had left.
 		2.too...to/ enough to...:
 			She is too young to work in a factory.
 			He is old enough to work in a factory.
@@ -49,18 +50,34 @@
 	1).Vt + 不定式:
     	
 		1.I want to buy a car.: Vt + O
-		动词后接to do名词的有: agree, aim, ask, choose, decide, pretend, expect, hope,learn,intend,manage,fail,offer, pretend, promise, refuse, wish... 
+		动词后接to do名词的有: 
+			agree,	（同意）
+             aim, 		（打算）
+             ask,		（要求）
+             choose,	（选择，决定）
+             decide,	（决定）
+             pretend,	（假装）
+             expect,	（期待）
+             hope,		（希望）
+             learn,		（学会）
+             intend,	（打算）
+             manage,	（设法）
+             fail,		（失败）
+             offer,		（提出）
+             promise,	（承诺）
+             refuse,	（拒绝）
+             wish... 	（希望）
 		 
 		2.I do not know waht to do: 由宾语从句变化而来 (形式为 引导词 + to do)
         							(why除外) (此句由what I should to变化而来).
 		  This book shows you how to cook meals.	
-		3.I felt to report it to the headmaster my duty.
+		3.I felt to report it to the headmaster my duty.:
 		
-	2).介 + 不定式:	
+	2).介 + 不定式:		（介词后通常接doing，除了but和except这两个介词）
 		1)[but,except] 除了.... 在这两个介词后可以使用不定式充当宾语,若有do则省略to:
 		The only thing I can do is (to)wait
 		I can do nothing but (to)wait
-		He seldom calls me exce pt to ask for money
+		He seldom calls me except to ask for money
 		
 		2)其他的介词可以后接宾语从句在从句中可以用不定式:
 		I am thinking about how to save the world
@@ -68,9 +85,10 @@
 7.作补语: (主要是作宾补,宾补变成被动可以作主补)
 	I want to buy a car.
 	I want you to buy a car.     主补 You are wanted to buy a car。
-	.... to do ....
-	advise(建议), allow, as, command, encourage, forbid, force, invite, require, order, persuade, cause, show, teach, tell
-	 主动省"to",  被动还原
+	....sb. to do ....  通常sb. 作宾语，不定式作宾补翻译为  (例如 advise sb. to do 建议某人做某事)
+	advise(建议), allow（允许）, ask, command, encourage, forbid, force, invite, require, order, persuade, cause, show, teach, tell
+	
+	 下列动词作谓语若主动则省去不定式的"to", 若被动则还原（不省略to）
 	 一感: feel
 	 二听: hear, listen to
 	 三让: have, let, make
