--- a/英语/平行世界/非谓语.md
+++ b/英语/平行世界/非谓语.md
@@ -82,11 +82,11 @@
 		2)其他的介词可以后接宾语从句在从句中可以用不定式:
 		I am thinking about how to save the world
 		
-7.作补语: (主要是作宾补,宾补变成被动可以作主补)
+7.作补语: (主要是作宾补,宾补在谓语变成被动时可以作主补)
 	I want to buy a car.
 	I want you to buy a car.     主补 You are wanted to buy a car。
 	....sb. to do ....  通常sb. 作宾语，不定式作宾补翻译为  (例如 advise sb. to do 建议某人做某事)
-	advise(建议), allow（允许）, ask, command, encourage, forbid, force, invite, require, order, persuade, cause, show, teach, tell
+	advise(建议), allow（允许）, ask（要求）, command（命令）, encourage（鼓励）, forbid（禁止）, force（强迫）, invite（邀请）, require（要求）, order（命令）, persuade（说服）, cause（导致）,  teach（教）, tell（告诉）
 	
 	 下列动词作谓语若主动则省去不定式的"to", 若被动则还原（不省略to）
 	 一感: feel
@@ -151,7 +151,7 @@ To learn English well is important for you(逻辑主语). => it is important for
 
 It's adj.(difficult, important, necessary, dangerous...) for sb. to do sth.		外在客观用for
 
-It's adj.(brave, clever, cruel, foolish, honest, kind, polite, selfish, silly, stupid,wise) for sb. to do stb.		内在用of
+It's adj.(brave, clever, cruel, foolish, honest, kind, polite, selfish, silly, stupid,wise) of sb. to do sth.		内在用of
 
 ```
 
@@ -230,7 +230,7 @@ I told him not to go home.
 1.作主语/表语:	动名词作主语,谓语动词是单数
 	主语后置 it做形式宾语:
         Ating Dangsheng and Huangqi herbs is also for this. => It is also for this ating Dangsheng and Huangqi herbs #变后非常奇怪
-        Trying to persuade someone whom you do not know on the internet is no use(no point/a waste time of time) 动名词作主语 通常这三种情况下 可以主语后置 it做形式宾语
+        Trying to persuade someone whom you do not know on the internet is no use(no point/a waste of time) 动名词作主语 通常这三种情况下 可以主语后置 it做形式宾语
 	
 2.作宾语:
 	Vt + doing :
@@ -239,15 +239,15 @@ I told him not to go home.
 	 	with/without, for, of, on, at/by, in, to
 	 	(in) doing 中 in 经常被省略
 	 	to doing 会经常与不定式混淆
-	 	常见的搭配:
+	 	常见的搭配:   [搭配] + doing
 	 		have difficulty/trouble/problems/a difficult time/ a hard time (in) doing sth.
 	 		have fun/pleasure/a good time (in) doing sth.
-	 		spend time/money (in) doing sth.
-	 		when it comes to
-	 		Look forward to
-	 		Be/get used to
-	 		Devote oneself to
-	 		Stick to
+	 		spend time/money (in) doing sth.	 花时间/钱做某事
+	 		when it comes to	 当涉及到做某事
+	 		Look forward to		期待做某事
+	 		Be/get used to		 习惯于做某事
+	 		Devote oneself to	 全身心投入做某事
+	 		Stick to			坚持做
 ```
 
 ## 到底是to do还是 doing
@@ -294,14 +294,14 @@ wish				❌					✅
 stop			停止做某事...			停下,去做某事
 remember		记得做过某事				记得去做某事
 forget			忘记做某事				忘记去做某事
-try				尝试做某事					尝试去做某事
+try				尝试做某事				尽力去做某事
 mean			意味着做.../意思是做某事		打算做		
 need			需要被做					需要做
 require			需要做						需要做
 regret			后悔做某事				遗憾的做
 
 接宾语和宾补
-allow			allow doing 允许做			all sb. to do 允许某人做某事
+allow			allow doing 允许做			allow sb. to do 允许某人做某事
 advise			advise doing 建议做		advise sb. to do建议某人做某事
 encourage		encourage doing 鼓励做		encourage sb. to do鼓励某人做某事
 ask				ask to do要求做						ask sb. to do请求某人做某事
@@ -409,8 +409,8 @@ There is no chance of that being settled.
 
 ```
 作定语
-	单个分词作前置定语
-	分词词组作后置定语
+	单个分词作前置定语: falling rain
+	分词词组作后置定语: The boy sitting over there likes singing.
 
 作状语
 	省略： 1.重复  （去掉重复S） 2.不产生歧义（谓语=>非谓语）
@@ -418,11 +418,15 @@ There is no chance of that being settled.
 		be + doing => doing
 		be + done => done
 		v + p => p
-		情态动词 + do => to do
-
+		情态动词 + do => to do	
+	若主语一致，则壮从省去引导词和主语谓语动词按上面规则变非谓语动词
+	若主语不一致，省去引导词谓语动词变非谓语动词
+	
 作补语(宾补，主补)
-
-
+	分词作宾补：
+		I found the tree lying on the street. 
+	分词作主补： （讲主句变为被动，补语就修饰主语了）
+		The tree was found lying on the street by me.
 ```
 
 ### 现在分词的时态和语态
@@ -463,31 +467,42 @@ Having been done: 不能作定语和补语   只能做状语
 
 ```
 done (vi[完成]/vt[完成，被动])
+
 ```
 
 ### 过去分词作成分
 
 ```
-作定语
-	前置定语 vi
-	前置定语 vt
-	后置定语 vi
-	后置定语 vt
+1.作定语
+	we built the house last year. （及物才能接宾语，有宾语才能被动）
+	the house was built last year by us. （被动）
+	Time flies. （不及物没有被动）
 	
-作状语
-	
+	前置定语 vi. ✅
+		fallen leaves.
+	前置定语 vt. ✅
+		a respected teacher. 
+	后置定语 vi. ❌
+		The rain which has fallen makes the ground wet. => The rain having fallen makes the ground wet.  		having fallen不能作定语
+	后置定语 vt. ✅
+		The house built last year has been sold out.
+    
 
-作补语
+2.作状语
+	只有及物动词才能作状语
+	不及物动词只有变成现在分词才能作状语
+
+3.作补语
 //TODO
 ```
 
 
 
-### 不能做成份的分词结构
+### 不能作定语和状语的分词结构
 
 ```
 Leaves having fallen = fallen leaves
-The house doing been built last year = the house built last year
+The house having been built last year = the house built last year
 
 //TODO
 ```
@@ -653,3 +668,4 @@ practice doing 练习做某事
 
 
 
+​	
